--- a/client/src/index.css
+++ b/client/src/index.css
@@ -35,6 +35,7 @@ html, body {
 }
 
 body {
+  min-width: 320px;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
